[OPENMEETINGS-2783] some issues are addressed